# pt-liqadj

./: .gitignore  README.md  pyproject.toml  pytest.ini
configs/: base.yaml  exp_gnn_vs_baseline.yaml  exp_local.yaml  gat.default.yaml  gnn.default.yaml  gru.default.yaml  mlp.default.yaml  mvdgt.default.yaml  simulate.yaml
data/raw/: hy_oas.parquet  ig_oas.parquet  move.parquet  vix.parquet
docs/: TRACE_to_MV_DGT_ADAPTER.md
models/demo_mlp/: ckpt.pt  feature_names.json  metrics_val.json  scaler.json  train_config.json
models/dgt_demo/: feature_names.json  market_preproc.json  model_config.json  mvdgt_meta.json  samples.parquet  scaler.json  train_config.json  view_masks.pt
models/gru_demo/: ckpt.pt  config.json  feature_names.json  metrics_val.json  model_config.json  mvdgt_meta.json  scaler.json  scaler_market.json  scaler_trade.json
ptliq/: scoring.py
ptliq/backtest/: metrics.py  protocol.py
ptliq/cli/: backtest.py  eval.py  exp_gnn_vs_baseline.py  explore.py  featurize.py  gat_train.py  gnn_backtest.py  gnn_build_dataset.py  gnn_build_graph.py  gnn_eval.py  gnn_pack.py  gnn_report.py  gnn_score.py  gnn_serve.py  gnn_train.py  gru_train.py  hy_oas.py  ig_oas.py  move.py  mvdgt_build.py  mvdgt_export_onnx.py  mvdgt_train.py  pack.py  paper.py  pyg_explore.py  report.py  run.py  score.py  serve.py  simulate.py  split.py  tensorboard.py  tensorboard_stop.py  train.py  train_baseline.py  validate.py  vix.py  web.py
ptliq/config/: schema.py
ptliq/data/: io.py  market.py  schemas.py  simulate.py  split.py  validate.py
ptliq/features/: __init__.py  build.py  build_mvdgt_dataset.py  graph_dataset.py  graph_portfolio.py
ptliq/model/: __init__.py  backbone.py  baseline.py  calibrator.py  heads.py  losses.py  mlp_encoder.py  model.py  mv_dgt.py  portfolio_encoder.py  utils.py
ptliq/paper/: experiment.py  make_data.py  make_figures.py  score_scenarios.py
ptliq/service/: app.py  dtypes.py  scoring.py
scripts/: compute_metrics.awk  compute_metrics_fixed.py
tests/: __init__.py  conftest.py  test_backtest_protocol.py  test_calibration_bins.py  test_cli_integration.py  test_config_runner.py  test_corr_featurize.py  test_data_simulate.py  test_data_validate.py  test_dgt_scorer.py  test_features_leakage.py  test_gat_colab_model.py  test_gat_diff.py  test_gat_loop.py  test_gnn_eval_cli.py  test_gnn_pipeline_e2e.py  test_gnn_train_cli.py  test_gnn_unit_sanity.py  test_gnn_xfmr_learns.py  test_market_context.py  test_model_components.py  test_model_split.py  test_mvdgt_build_and_train.py  test_mvdgt_cli_root.py  test_mvdgt_diagnostic_e2e.py  test_mvdgt_diagnostic_more.py  test_mvdgt_diagnostic_parity_breakdown.py  test_mvdgt_diagnostic_parity_extended.py  test_mvdgt_diagnostic_pf_path_effects.py  test_mvdgt_diagnostic_pf_toggle.py  test_mvdgt_diagnostic_pf_vectors_semantics.py  test_mvdgt_diagnostic_port_vectors.py  test_mvdgt_diagnostic_scaling.py  test_mvdgt_e2e.py  test_pack_and_batch_score.py  test_portfolio_weights.py  test_pyg_portfolio_context.py  test_report_html.py  test_scorer_shapes.py  test_serve_cli.py  (+14 more)
(+45 files in other folders)
