[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pt-liqadj"
version = "0.1.0"
dependencies = ["pydantic", "pyarrow", "pandas", "numpy", "pyyaml", "typer", "rich", "torch", "fastapi", "uvicorn"]

[project.scripts]
ptliq-simulate = "ptliq.cli.simulate:app"
ptliq-ingest = "ptliq.cli.ingest:app"
ptliq-validate = "ptliq.cli.validate:app"
ptliq-split = "ptliq.cli.split:app"
ptliq-featurize = "ptliq.cli.featurize:app"
ptliq-train = "ptliq.cli.train:app"
ptliq-eval = "ptliq.cli.eval:app"
ptliq-backtest = "ptliq.cli.backtest:app"
ptliq-report = "ptliq.cli.report:app"
ptliq-pack = "ptliq.cli.pack:app"
ptliq-serve = "ptliq.cli.serve:app"
ptliq-score = "ptliq.cli.score:app"
ptliq-run = "ptliq.cli.run:app"

ptliq-exp = "ptliq.cli.exp_gnn_vs_baseline:app"

ptliq-gnn-build-graph = "ptliq.cli.gnn_build_graph:app"
ptliq-gnn-build-dataset = "ptliq.cli.gnn_build_dataset:app"
ptliq-gnn-train = "ptliq.cli.gnn_train:app"
ptliq-gnn-eval = "ptliq.cli.gnn_eval:app"
ptliq-gnn-backtest = "ptliq.cli.gnn_backtest:app"
ptliq-gnn-pack = "ptliq.cli.gnn_pack:app"
ptliq-gnn-score = "ptliq.cli.gnn_score:app"
ptliq-gnn-serve = "ptliq.cli.gnn_serve:app"
ptliq-gnn-report = "ptliq.cli.gnn_report:app"
ptliq-explore = "ptliq.cli.explore:app"


[tool.setuptools.packages.find]
where = ["."]
include = ["ptliq*"]
exclude = ["tests*", "notebooks*", "data*", "models*", "configs*", "reports*", "examples*"]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "ruff", "mypy", "types-PyYAML"]

# (optional) if you have non-.py files inside ptliq you want included:
# [tool.setuptools.package-data]
# ptliq = ["**/*.yaml", "**/*.yml", "**/*.json", "**/*.txt"]
